--- a/catalog/view/theme/default/template/extension/module/featured.twig
+++ b/catalog/view/theme/default/template/extension/module/featured.twig
@@ -20,6 +20,9 @@
               {% endfor %}
               </span>
               {% endif %}
+              {% if product.discount %}
+              <span class="discount tag is-danger">-{{ product.discount }}%</span>
+              {% endif %}
             </a>
           </div>
           <div class="caption">
