--- a/catalog/view/theme/default/template/product/category.twig
+++ b/catalog/view/theme/default/template/product/category.twig
@@ -158,15 +158,18 @@
               <div class="image">
                 <a href="{{ product.href }}" class="is-flex is-justify-content-center" aria-label="{{ product.name }}">
                   <img src="{{ product.thumb }}" loading="lazy" alt="{{ product.name }}" title="{{ product.name }}" />
-                  <span class="tag {{ product.quantity ? 'is-success' : 'is-danger' }} is-light stock">{{ product.stock }}</span>
+                  <span class="stock tag {{ product.quantity ? 'is-success' : 'is-danger' }} is-light">{{ product.stock }}</span>
                   {% if product.stickers %}
                   <span class="stickers is-block mb-0">
                   {% for sticker in product.stickers %}
-                    <span class="is-block mb-1">
-                      <span class="{{ sticker.class }}">{{ sticker.content|html_entity_decode }}</span>
-                    </span>                    
+                  <span class="is-block mb-1">
+                    <span class="{{ sticker.class }}">{{ sticker.content|html_entity_decode }}</span>
+                  </span>                    
                   {% endfor %}
                   </span>
+                  {% endif %}
+                  {% if product.discount %}
+                  <span class="discount tag is-danger">-{{ product.discount }}%</span>
                   {% endif %}
                 </a>
               </div>
