--- a/catalog/view/theme/default/template/checkout/cart.twig
+++ b/catalog/view/theme/default/template/checkout/cart.twig
@@ -24,7 +24,7 @@
       {% endif %}
       <div id="content" class="{{ class }}">
         <h1 class="title is-3">{{ heading_title }}</h1>
-        {% if products %}
+        {% if products or vouchers %}
         <div id="cart-content">
           <div class="columns is-mobile is-multiline">
             <div class="column is-9-fullhd is-9-widescreen is-8-desktop is-12-tablet is-12-mobile cart-products">
@@ -46,9 +46,9 @@
                       <div class="column is-10-fullhd is-10-widescreen is-10-desktop is-10-tablet is-8-mobile is-10-desktop is-8-mobile">
                         <div class="columns">
                           <div class="column is-9-fullhd is-8-widescreen is-7-desktop is-8-tablet is-12-mobile">
-                            <a href="{{ product.href }}" class="is-size-5-desktop is-size-5-tablet is-size-6-mobile is-block has-text-link my-2">{{ product.name }}</a>
+                            <a href="{{ product.href }}" class="is-size-5-desktop is-size-5-tablet is-size-6-mobile is-block has-text-link mb-2">{{ product.name }}</a>
                             {% if not product.stock %}
-                            <p><span class="tag is-danger">Предзаказ</span></p>
+                            <p><span class="tag is-danger">{{ text_pre_order }}</span></p>
                             {% endif %}
                             {% if product.option %}
                             <div class="cart-options">
@@ -60,12 +60,12 @@
                           </div>
                           <div class="column is-3-fullhd is-4-widescreen is-5-desktop is-4-tablet is-12-mobile">
                             <div class="block mb-2">
-                              <div class="field is-grouped">
+                              <div class="field is-grouped is-justify-content-flex-end">
                                 <div class="field has-addons mb-0 quantity-counter">
                                   <p class="control">
                                     <a class="button minus">
                                       <span class="icon">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                                           <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
                                         </svg>
                                       </span>
@@ -77,7 +77,7 @@
                                   <p class="control">
                                     <a class="button plus">
                                       <span class="icon">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
                                           <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
                                         </svg>
                                       </span>
@@ -85,23 +85,21 @@
                                   </p>
                                 </div>
                                 <div class="field ml-3 mb-0">
-                                  <p class="control">
-                                    <a class="button is-danger is-outlined cart-delete-product" data-key="{{ product.cart_id }}">
-                                      <span class="icon">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
-                                          <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
-                                        </svg>
-                                      </span>
-                                    </a>
-                                  </p>
+                                  <a class="cart-delete-product button is-danger is-outlined" data-key="{{ product.cart_id }}">
+                                    <span class="icon">
+                                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                                        <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+                                      </svg>
+                                    </span>
+                                  </a>
                                 </div>
                               </div>
                             </div>
-                            <div class="block mb-3">
+                            <div class="block mb-0 has-text-right">
                               <span class="per-one">{{ product.price }}</span> / <span class="has-text-weight-bold">{{ product.total }}</span>
                             </div>
                             {% if product.reward %}
-                            <div class="is-flex is-align-items-center cart-reward">
+                            <div class="cart-reward is-flex is-align-items-center mt-3">
                               <span class="icon-text">
                                 <span class="icon has-text-success">
                                   <svg width="1.4rem" height="1.4rem" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -116,6 +114,53 @@
                               </span>
                             </div>
                             {% endif %}
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  {% endfor %}
+                  {% for voucher in vouchers %}
+                  <div class="panel-block is-block p-4">
+                    <div class="columns is-mobile is-flex-wrap-wrap">
+                      <div class="column is-2-fullhd is-2-widescreen is-2-desktop is-2-tablet is-4-mobile has-text-centered p-3">
+                        <div class="is-block is-relative">
+                          <span class="icon is-large has-text-primary">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" viewBox="0 0 16 16">
+                              <path d="M3 2.5a2.5 2.5 0 0 1 5 0 2.5 2.5 0 0 1 5 0v.006c0 .07 0 .27-.038.494H15a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a1.5 1.5 0 0 1-1.5 1.5h-11A1.5 1.5 0 0 1 1 14.5V7a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h2.038A3 3 0 0 1 3 2.506zm1.068.5H7v-.5a1.5 1.5 0 1 0-3 0c0 .085.002.274.045.43zM9 3h2.932l.023-.07c.043-.156.045-.345.045-.43a1.5 1.5 0 0 0-3 0zM1 4v2h6V4zm8 0v2h6V4zm5 3H9v8h4.5a.5.5 0 0 0 .5-.5zm-7 8V7H2v7.5a.5.5 0 0 0 .5.5z"/>
+                            </svg>
+                          </span>
+                        </div>
+                      </div>
+                      <div class="column is-10-fullhd is-10-widescreen is-10-desktop is-10-tablet is-8-mobile is-10-desktop is-8-mobile">
+                        <div class="columns">
+                          <div class="column is-9-fullhd is-8-widescreen is-7-desktop is-8-tablet is-12-mobile">
+                            <span class="is-size-5-desktop is-size-5-tablet is-size-6-mobile is-block has-text-link my-2">{{ voucher.description }}</span>
+                          </div>
+                          <div class="column is-3-fullhd is-4-widescreen is-5-desktop is-4-tablet is-12-mobile">
+                            <div class="block mb-2">
+                              <div class="field is-grouped is-justify-content-flex-end">
+                                <div class="field has-addons mb-0 quantity-counter">
+                                  <p class="control">
+                                    <input type="text" value="1" class="input has-text-centered" disabled="disabled" maxlength="1" style="max-width: 60px;" />
+                                  </p>
+                                </div>
+                                <div class="field ml-3 mb-0">
+                                  <p class="control">
+                                    <a class="cart-delete-product button is-danger is-outlined" data-key="{{ voucher.key }}">
+                                      <span class="icon">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                                          <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+                                        </svg>
+                                      </span>
+                                    </a>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="block mb-0 has-text-right">
+                              <span class="has-text-weight-bold">{{ voucher.amount }}</span>
+                            </div>
                           </div>
                         </div>
                       </div>
