--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -837,6 +837,13 @@
     }, 500);
   });
 
+  $('body').on('click', '.score .tag', function () {
+    $(this).siblings().removeClass('is-active');
+    $(this).addClass('is-active');
+
+    $(this).parent().find('input[name="rating"]').val($(this).data('score'));
+  });
+
   $('#reviews').delegate('.pagination a', 'click', function (e) {
     e.preventDefault();
 
