--- a/admin/view/template/extension/module/html.twig
+++ b/admin/view/template/extension/module/html.twig
@@ -55,6 +55,32 @@
             </div>
           </div>
           <div class="form-group">
+            <label class="col-sm-2 control-label" for="input-include-swiper">{{ entry_include_swiper }}</label>
+            <div class="col-sm-10">
+              <label class="radio-inline">
+                <input type="radio" name="include_swiper" value="1" {{ include_swiper ? 'checked' : '' }}>
+                {{ text_yes }}
+              </label>
+              <label class="radio-inline">
+                <input type="radio" name="include_swiper" value="0" {{ not include_swiper ? 'checked' : '' }}>
+                {{ text_no }}
+              </label>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label" for="input-include-fancybox">{{ entry_include_fancybox }}</label>
+            <div class="col-sm-10">
+              <label class="radio-inline">
+                <input type="radio" name="include_fancybox" value="1" {{ include_fancybox ? 'checked' : '' }}>
+                {{ text_yes }}
+              </label>
+              <label class="radio-inline">
+                <input type="radio" name="include_fancybox" value="0" {{ not include_fancybox ? 'checked' : '' }}>
+                {{ text_no }}
+              </label>
+            </div>
+          </div>
+          <div class="form-group">
             <label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
             <div class="col-sm-10">
               <select name="status" id="input-status" class="form-control">
